--- a/package.json
+++ b/package.json
@@ -1,19 +1,61 @@
 {
   "name": "todo",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "ng": "ng",
+    "build": "npm run env -s && ng build --prod",
+    "start": "npm run env -s && ng serve --aot --proxy-config proxy.conf.js",
+    "serve:sw": "npm run build -s && npx http-server ./dist -p 4200"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/chan18/todo-angular-typescrpipt.git"
+  "dependencies": {
+    "@angular/animations": "^7.0.0",
+    "@angular/common": "^7.0.0",
+    "@angular/compiler": "^7.0.0",
+    "@angular/core": "^7.0.0",
+    "@angular/forms": "^7.0.0",
+    "@angular/http": "^7.0.0",
+    "@angular/platform-browser": "^7.0.0",
+    "@angular/platform-browser-dynamic": "^7.0.0",
+    "@angular/router": "^7.0.0",
+    "@ngx-translate/core": "^10.0.1",
+    "@angular/service-worker": "^7.0.0",
+    "@ng-bootstrap/ng-bootstrap": "^3.3.0",
+    "bootstrap": "^4.1.1",
+    "@fortawesome/fontawesome-free-webfonts": "^1.0.9",
+    "core-js": "^2.5.6",
+    "lodash": "^4.17.10",
+    "rxjs": "^6.3.1",
+    "zone.js": "^0.8.26"
   },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/chan18/todo-angular-typescrpipt/issues"
+  "devDependencies": {
+    "@angular/cli": "~7.0.2",
+    "@angular/compiler-cli": "^7.0.0",
+    "@angular/language-service": "^7.0.0",
+    "@angular-devkit/build-angular": "^0.10.2",
+    "@biesbjerg/ngx-translate-extract": "^2.3.4",
+    "@ngx-rocket/scripts": "^3.0.0",   
+    "@types/lodash": "^4.14.108",
+    "@types/node": "^8.10.13",
+    "codelyzer": "^4.4.4",
+    "hads": "^1.7.0",
+    "https-proxy-agent": "^2.0.0",
+    "prettier": "^1.14.0",   
+    "pretty-quick": "^1.6.0",
+    "husky": "^0.14.3",
+    "puppeteer": "^1.4.0",
+    "ts-node": "~7.0.1",
+    "typescript": "~3.1.3"
   },
-  "homepage": "https://github.com/chan18/todo-angular-typescrpipt#readme"
+  "prettier": {
+    "singleQuote": true,
+    "overrides": [
+      {
+        "files": "*.scss",
+        "options": {
+          "singleQuote": false
+        }
+      }
+    ]
+  }
 }
